--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "bugs": {
     "url": "https://github.com/GeoSmartCity-CIP/gsc-adminCS/issues"
   },
-  "license": "MIT",
+  "license": "EUPL-1.1",
   "licenses": [
     {
-      "type": "MIT",
-      "url": "https://github.com/GeoSmartCity-CIP/gsc-adminCS/LICENSE"
+      "type": "EUPL-1.1",
+      "url": "https://github.com/GeoSmartCity-CIP/gsc-client/blob/master/LICENSE"
     }
   ],
   "main": "/",
@@ -34,8 +34,9 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "date": "^1.0.2",
-    "datejs": "^1.0.0-rc3",
+    "datatables.net": "^1.10.11",
+    "datatables.net-dt": "^1.10.11",
+    "font-awesome": "^4.6.1",
     "gsc": "^0.1.0",
     "jquery": "^2.2.2",
     "openlayers": "^3.15.1",
